--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KidQuest Home</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="KidQuest-Museum.html">Museum</a></li>
-                <li><a href="Exhibitions.html">Exhibitions</a></li>
-                <li><a href="Contribution.html">Contribution</a></li>
-                <li><a href="Contact-Us.html">Contact Us</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="/Museum/KidQuest-Museum.html">Museum</a></li>
+                <li><a href="/Interactions/Exhibitions.html">Exhibitions</a></li>
+                <li><a href="/Interactions/Contribution.html">Contribution</a></li>
+                <li><a href="/Interactions/Contact-Us.html">Contact Us</a></li>
             </ul>
             <div class="logo">
             <a href="index.html"><img class="logo" src="images/logo2.png" alt=""></a> 
