--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header class="header">
         <nav class="navbar">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="/Museum/KidQuest-Museum.html">Museum</a></li>
-                <li><a href="/Interactions/Exhibitions.html">Exhibitions</a></li>
-                <li><a href="/Interactions/Contribution.html">Contribution</a></li>
-                <li><a href="/Interactions/Contact-Us.html">Contact Us</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Museum/KidQuest-Museum.html">Museum</a></li>
+                <li><a href="../Interactions/Exhibitions.html">Exhibitions</a></li>
+                <li><a href="../Interactions/Contribution.html">Contribution</a></li>
+                <li><a href="../Interactions/Contact-Us.html">Contact Us</a></li>
             </ul>
             <div class="logo">
             <a href="index.html"><img class="logo" src="images/logo2.png" alt=""></a> 
