--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         <div class="cover">
             <h1>Are you a young person looking to learn more about science?</h1>
             <p>Come on down to our museum, there's plenty to see and do.</p>
-            <a href="Contact-Us.html"><button><h3>Contact Us</h3></button></a>
+            <a href="/Interactions/Contact-Us.html"><button><h3>Contact Us</h3></button></a>
         </div>
     </header>
     <main>
         <section class="welcome">
             <h2>Welcome to theKidQuest Museum</h2>
             <div class="image-gallery">
-                <img src="images/andrew-ruiz-348421.jpg" alt="">
-                <img src="images/billetto-editorial-334686.jpg" alt="">
+                <img src="./images/andrew-ruiz-348421.jpg" alt="">
+                <img src="./images/billetto-editorial-334686.jpg" alt="">
             </div>
 
             <div class="image-gallery2">
-                <img src="images/samuel-zeller-158996.jpg" alt="">
-                <img src="images/scientific-2040795_1280.jpg" alt="">
+                <img src="./images/samuel-zeller-158996.jpg" alt="">
+                <img src="./images/scientific-2040795_1280.jpg" alt="">
                 </div>
         </section>
     </main>
@@ -57,7 +57,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <a href="Contact-Us.html"><h3>Work Hours</h3></a>
+                <a href="/Interactions/Contact-Us.html"><h3>Work Hours</h3></a>
                 <p>Monday: Closed
                     Tuesday: 10:00 - 16:00
                     Wednesday: 10:00 - 16:00
@@ -68,7 +68,7 @@
                
             </div>
             <div class="footer-section">
-                <a href="Contact-Us.html"><h3>Support</h3></a>
+                <a href="/Interactions/Contact-Us.html"><h3>Support</h3></a>
                 <p>Support Center</p>
                 <p>Contact Support</p>
                 <p> FAQ</p>
@@ -76,15 +76,15 @@
                 <p> chat </p>
             </div>
             <div class="footer-section">
-                <a href="Contact-Us.html"><h3>Address</h3></a>
+                <a href="/Interactions/Contact-Us.html"><h3>Address</h3></a>
                 <p>Norway, Lillestrøm</p>
                 <p>Vinterveien 48</p>
             </div>
             <div class="footer-section">
-               <a href="Terms and Conditions.html"> <h3>Terms and Conditions</h3></a>
+               <a href="/Privacy/Terms and Conditions.html"> <h3>Terms and Conditions</h3></a>
             </div>
             <div class="footer-section">
-               <a href="Privacy Policy.html"> <h3>Privacy Policy</h3></a>
+               <a href="/Privacy/Privacy Policy.html"> <h3>Privacy Policy</h3></a>
             </div>
         </div>
     </footer>
