--- a/Museum/KidQuest-Museum.html
+++ b/Museum/KidQuest-Museum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KidQuest Museum</title>
-    <link rel="stylesheet" href="/Museum/KidQuest-Museum.css">
+    <link rel="stylesheet" href="KidQuest-Museum.css">
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
                 <li><a href="../Museum/KidQuest-Museum.html">Museum</a></li>
                 <li><a href="../Interactions/Exhibitions.html">Exhibitions</a></li>
                 <li><a href="../Interactions/Contribution.html">Contribution</a></li>
-                <li><a href="/Interactions/Contact-Us.html">Contact Us</a></li>
+                <li><a href="../Interactions/Contact-Us.html">Contact Us</a></li>
             </ul>
             <div class="logo">
                 <a href="../index.html"><img class="logo" src="../images/logo2.png" alt=""></a>
