--- a/Interactions/Contact-Us.html
+++ b/Interactions/Contact-Us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KidQuest Museum</title>
-    <link rel="stylesheet" href="/Interactions/Contact-Us.css">
+    <link rel="stylesheet" href="Contact-Us.css">
 </head>
 <body>
     <header class="header">
