--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="cover">
             <h1>Are you a young person looking to learn more about science?</h1>
             <p>Come on down to our museum, there's plenty to see and do.</p>
-            <a href="/Interactions/Contact-Us.html"><button><h3>Contact Us</h3></button></a>
+            <a href="./Interactions/Contact-Us.html"><button><h3>Contact Us</h3></button></a>
         </div>
     </header>
     <main>
