--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
                 <p> chat </p>
             </div>
             <div class="footer-section">
-                <a href="../Interactions/Contact-Us.html"><h3>Address</h3></a>
+                <a href="Interactions/Contact-Us.html"><h3>Address</h3></a>
                 <p>Norway, Lillestrøm</p>
                 <p>Vinterveien 48</p>
             </div>
             <div class="footer-section">
-               <a href="../Privacy/Terms and Conditions.html"> <h3>Terms and Conditions</h3></a>
+               <a href="./Privacy/Terms and Conditions.html"> <h3>Terms and Conditions</h3></a>
             </div>
             <div class="footer-section">
-               <a href="../Privacy/Privacy Policy.html"> <h3>Privacy Policy</h3></a>
+               <a href="./Privacy/Privacy Policy.html"> <h3>Privacy Policy</h3></a>
             </div>
         </div>
     </footer>
