--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <a href="../Interactions/Contact-Us.html"><h3>Work Hours</h3></a>
+                <a href="./Interactions/Contact-Us.html"><h3>Work Hours</h3></a>
                 <p>Monday: Closed
                     Tuesday: 10:00 - 16:00
                     Wednesday: 10:00 - 16:00
@@ -68,7 +68,7 @@
                
             </div>
             <div class="footer-section">
-                <a href="../Interactions/Contact-Us.html"><h3>Support</h3></a>
+                <a href="./Interactions/Contact-Us.html"><h3>Support</h3></a>
                 <p>Support Center</p>
                 <p>Contact Support</p>
                 <p> FAQ</p>
@@ -76,7 +76,7 @@
                 <p> chat </p>
             </div>
             <div class="footer-section">
-                <a href="Interactions/Contact-Us.html"><h3>Address</h3></a>
+                <a href="./Interactions/Contact-Us.html"><h3>Address</h3></a>
                 <p>Norway, Lillestrøm</p>
                 <p>Vinterveien 48</p>
             </div>
